# cdj3k-subucom-tools

./: .gitignore  Makefile.am  README.md  configure.ac  do_build.sh
doc/: subucom.html  subucom.js
src/: subucom_blink.c  subucom_check.c  subucom_dump.c  subucom_reset_timer.c  subucom_uinput.c
src/lib/: crc16.c  crc16.h  doom_keymap.c  keymap.h  subucom.c  subucom.h  uinput.c  uinput.h
